Initial NEWTROY configuration. It works!

--- a/config.cfg
+++ b/config.cfg
@@ -3,8 +3,10 @@
 # Add as many users as you want for your VPN server here.
 # Credentials will be generated for each one.
 users:
-  - dan
-  - jack
+  - andraia
+  - glitch
+  - certicalaptop
+  - architect
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
@@ -29,13 +31,21 @@ adblock_lists:
  - "https://www.malwaredomainlist.com/hostslist/hosts.txt"
  - "https://hosts-file.net/ad_servers.txt"
 
+# Google DNS
+# dns_servers:
+#   ipv4:
+#     - 8.8.8.8
+#     - 8.8.4.4
+#   ipv6:
+#     - 2001:4860:4860::8888
+#     - 2001:4860:4860::8844
+
+# QuadNine DNS
 dns_servers:
   ipv4:
-    - 8.8.8.8
-    - 8.8.4.4
+    - 9.9.9.9
   ipv6:
-    - 2001:4860:4860::8888
-    - 2001:4860:4860::8844
+    - 2620:fe::fe
 
 # IP address for the local dns resolver
 local_service_ip: 172.16.0.1
