--- a/config.cfg
+++ b/config.cfg
@@ -55,7 +55,7 @@ VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
 CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 
 # Block traffic between connected clients
-BetweenClients_DROP: Y
+BetweenClients_DROP: N
 
 congrats:
   common: |
