Add dns_route53 role
Allow adding the dns_route53 role, which will create a DNS entry in
route53 for each VPN client.

--- a/config.cfg
+++ b/config.cfg
@@ -58,10 +58,17 @@ CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
 BetweenClients_DROP: N
 
 # Used for resolving hosts within the VPN, not connecting to the VPN
-# If BetweenClients_DROP is set to 'N', and the dns_adblocking role is enabled,
-# connected users will be able to communicate with each other using
-# $user.$vpn_domain DNS names
-vpn_domain: algo.internal
+# - Set BetweenClients_DROP to N so that clients can actually talk to each other
+# - If dns_adblocking role is enabled, configure dnsmasq to resolve the clients
+# - If the dns_route53 tag is defined,
+#   and vpn_hosted_zone_id is set to a valid Route53 hosted zone,
+#   and you have provided valid AWS credentials,
+#   create a Route53 record for each client
+# Connected users will be able to communicate with each other using $user.$vpn_domain DNS names
+vpn_domain: internal.micahrl.com
+
+# If defined, update a Route53 Hosted Zone as described above
+vpn_hosted_zone_id: Z36T04QT5EZEEU
 
 congrats:
   common: |
