--- a/config.cfg
+++ b/config.cfg
@@ -7,6 +7,7 @@ users:
   - glitch
   - certicalaptop
   - architect
+  - nuvision
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
 
