Add magrassee, update README.NEWTROY, update config

--- a/config.cfg
+++ b/config.cfg
@@ -8,8 +8,16 @@ users:
   - certicalaptop
   - architect
   - nuvision
+  - magrassee
 
 # NOTE: If your usernames have leading 0's, like "000dan", you have to escape them
+
+### NEWTROY default overrides
+
+aws_server_name: newtroy
+region: us-east-2
+Win10_Enabled: Y
+Store_CAKEY: Y
 
 ### Advanced users only below this line ###
 
