Deploy with a single script call
- Add `newtroy` script for deployments
- Store secrets in ansible vault
- Unlock ansible vault with GPG
- Move documentation on secret variables to comments in config.cfg
- Move documentation on ansible tags to newtroy script

Now, from within a PSYOPS container, NEWTROY can be deployed with:

    ./newtroy

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ retry_files_enabled = False
 host_key_checking = False
 timeout = 60
 log_path = ./ansible.log
+vault_password_file = .vault-pass-script
 
 [paramiko_connection]
 record_host_keys = False
