--- a/config.cfg
+++ b/config.cfg
@@ -19,6 +19,23 @@ region: us-east-2
 Win10_Enabled: Y
 Store_CAKEY: Y
 
+# From the NEWTROY vault
+
+aws_access_key: "{{ vault_aws_access_key }}"
+aws_secret_key: "{{ vault_aws_secret_key }}"
+
+# If you have added a user to `config.cfg` and are redeploying,
+# this variable MUST be set to the value that Algo generated on the first deployment
+# or else you'll get an error like 'unable to load CA private key'
+# If it's your first time deploying,
+# you can leave this blank causing Algo to generate a password for you
+# and display it at the end.
+easyrsa_CA_password: "{{ vault_easyrsa_CA_password }}"
+
+# This is just a nice thing to pass in
+# so my fucking client PKCS12 certificate passwords don't change every fucking time I redeploy
+p12_export_password: "{{ vault_p12_export_password }}"
+
 ### Advanced users only below this line ###
 
 # If True re-init all existing certificates. (True or False)
