Pass CA_password var for prod/testing

--- a/config.cfg
+++ b/config.cfg
@@ -30,7 +30,7 @@ aws_secret_key: "{{ vault_aws_secret_key }}"
 # If it's your first time deploying,
 # you can leave this blank causing Algo to generate a password for you
 # and display it at the end.
-easyrsa_CA_password: "{{ vault_easyrsa_CA_password }}"
+CA_password: "{{ vault_easyrsa_CA_password }}"
 
 # This is just a nice thing to pass in
 # so my fucking client PKCS12 certificate passwords don't change every fucking time I redeploy
