--- a/config.dotest.cfg
+++ b/config.dotest.cfg
@@ -8,5 +8,5 @@ do_region: nyc2
 # Variables from config.dotest.vault.cfg
 
 do_access_token: "{{ dotestvault_do_access_token }}"
-easyrsa_CA_password: "{{ dotestvault_easyrsa_CA_password }}"
+CA_password: "{{ dotestvault_easyrsa_CA_password }}"
 p12_export_password: "{{ dotestvault_p12_export_password }}"
