Update newtroy config for testing
- Add dns and adblock roles to testing
- Use us-east-1 rather than sa-east-1 because the latter seemed to be
  blocked by a lot of the web

--- a/config.test.cfg
+++ b/config.test.cfg
@@ -5,7 +5,7 @@
 aws_server_name: algotest.local
 
 # MUST BE DIFFERENT FROM PROD REGION or you will overwrite production
-region: sa-east-1
+region: us-east-1
 
 # Variables from vaults
 
