WIP: use DHCP with strongswan to assign unique IPs
- Improve IP address allocation
    - Use the .1 address as the local_service_ip
      This makes split tunneling simpler - no need to also tunnel
      the former local service IP of 172.16.0.1
    - Allocate the .50-.150 addresses for the DHCP range by default
- Add the asn1crypto module, (prereq for x509_common_name_hex filter)
- Add TODO about duplicate sourcing in /etc/network/interfaces
- Set a DHCP range in dnsmasq.conf
- Set dhcp-host entries in dnsmasq.conf including DHCP host IDs
- Fix the listen-address config for dnsmasq
- Add dnsmasq.leases to its apparmor config
- Add the dhcp plugin to strongswan, and configure it
- Generate all certs with the VPN domain appended...
  rather than /CN=user, generate with /CN=user.algo.local
- TEMP: disable cert revocation. Broken for now.
- Remove per-client conn stanzas from ipsec.conf
- Add new x509_common_name_hex jinga2 filter
- Add a notes.md file to track my notes

--- a/config.cfg
+++ b/config.cfg
@@ -74,7 +74,13 @@ dns_servers:
 #     - 2620:fe::fe
 
 # IP address for the local dns resolver
-local_service_ip: 172.16.0.1
+local_service_ip: "{{ vpn_network | ipaddr(1) | ipaddr('address') }}"
+
+# DHCP address offsets for dnsmasq (if dnsmasq is enabled)
+# A network of 10.19.48.0/24 with a range of 50-150 means that
+# DHCP addresses will be served to clients between 10.19.48.50 and 10.19.48.150
+vpn_network_dhcp_min: 50
+vpn_network_dhcp_max: 150
 
 pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
 VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
