Enable new subjectAltName_DNS support

--- a/config.cfg
+++ b/config.cfg
@@ -14,7 +14,9 @@ users:
 
 ### NEWTROY default overrides
 
-aws_server_name: newtroy
+newtroy_vpn_server_hostname: newtroy
+
+aws_server_name: "{{ newtroy_vpn_server_hostname }}"
 region: us-east-2
 Win10_Enabled: Y
 Store_CAKEY: Y
@@ -72,13 +74,6 @@ dns_servers:
     - 2606:4700:4700::1111
     - 2606:4700:4700::1001
 
-# QuadNine DNS
-# dns_servers:
-#   ipv4:
-#     - 9.9.9.9
-#   ipv6:
-#     - 2620:fe::fe
-
 # IP address for the local dns resolver
 local_service_ip: 172.16.0.1
 
@@ -101,6 +96,12 @@ vpn_domain: internal.micahrl.com
 
 # If defined, update a Route53 Hosted Zone as described above
 vpn_hosted_zone_id: Z36T04QT5EZEEU
+
+# This unfortunately named variable is used in the vpn role to indicate that the VPN server should
+# generate a certificate with the value of subjectAltName_DNS as a DNS entry in the cert's SubjectAltName field
+domain: true
+# If set, this variable is used by the vpn role to assign a DNS subject alt name to the VPN server cert
+subjectAltName_DNS: "{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}"
 
 congrats:
   common: |
