--- a/roles/dns_route53/tasks/main.yml
+++ b/roles/dns_route53/tasks/main.yml
@@ -1,27 +1,21 @@
 ---
 
-- name: Update Route53
+- name: Generate the Route53 CloudFormation template
+  template:
+    src: stack.yml.j2
+    dest: "configs/{{ route53_stack_name }}.yml"
 
-  route53:
+- name: Deploy the Route53 CloudFormation template
+  cloudformation:
     aws_access_key: "{{ aws_access_key | default(lookup('env','AWS_ACCESS_KEY_ID'), true)}}"
     aws_secret_key: "{{ aws_secret_key | default(lookup('env','AWS_SECRET_ACCESS_KEY'), true)}}"
-    #region: "{{ region }}"
-    overwrite: yes
-    retry_interval: 15
-    hosted_zone_id: "{{ vpn_hosted_zone_id }}"
-    zone: "{{ vpn_domain }}"
-    record: "{{ item.1 }}.{{ vpn_domain }}"
-    type: A
-    ttl: 300
-    value: "{{ vpn_network | ipaddr(item.0 + 1) | ipaddr('address') }}"
-    command: create
-    # Waiting could take 40 (or more?) seconds PER RECORD, so you might not want this
-    wait: yes
-
-  # when using a with_indexed_items loop:
-  # - {{ item.0 }} is the index, starting from zero
-  # - {{ item.1 }} is the value
-  with_indexed_items: "{{ users }}"
+    stack_name: "{{ route53_stack_name }}"
+    state: "present"
+    region: "{{ region }}"
+    template: "configs/{{ route53_stack_name }}.yml"
+    tags:
+      Environment: Algo
+  register: stack
 
   when:
   - vpn_domain is defined
