Update internal zone ID

--- a/config.cfg
+++ b/config.cfg
@@ -95,7 +95,7 @@ BetweenClients_DROP: N
 vpn_domain: internal.micahrl.com
 
 # If defined, update a Route53 Hosted Zone as described above
-vpn_hosted_zone_id: Z36T04QT5EZEEU
+vpn_hosted_zone_id: Z2OOB3F1JEVLME
 
 # This unfortunately named variable is used in the vpn role to indicate that the VPN server should
 # generate a certificate with the value of subjectAltName_DNS as a DNS entry in the cert's SubjectAltName field
