Eliminate randomly generated UUIDs
Use the new nbuuid filter plugin instead of random UUIDs.

This results in UUIDs that do not change on deployment, so long as the
input values (including server IP) do not change.

--- a/config.cfg
+++ b/config.cfg
@@ -77,9 +77,14 @@ dns_servers:
 # IP address for the local dns resolver
 local_service_ip: 172.16.0.1
 
-pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
-VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
-CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
+## NEWTROY change. Commented out. Now set in roles/vpn/tasks/client_configs.yml
+# pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
+# VPN_PayloadIdentifier: "{{ 800000 | random | to_uuid | upper }}"
+# CA_PayloadIdentifier: "{{ 700000 | random | to_uuid | upper }}"
+
+# A "namespace" that can be used when creating "name-based UUIDs" per RFC 4122
+# This will return the same value for the same input URL every time
+newtroy_algo_namespace: "{{ 'https://github.com/mrled/algo/tree/newtroy' | newtroy_url_nbuuid }}"
 
 # Block traffic between connected clients
 BetweenClients_DROP: N
