Improve ansible output

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,9 @@ timeout = 60
 log_path = ./ansible.log
 vault_password_file = .vault-pass-script
 
+# The 'debug' callback has much better output for humans than the default (ironically)
+stdout_callback = debug
+
 [paramiko_connection]
 record_host_keys = False
 
