Use {{ newtroy_server_configs }} var
- Replaces 'configs/{{ IP_subject_alt_name }}'
- Eliminates about half the uses of the IP_subject_alt_name var
- Necessary for moving to a DNS name for the server cert's CommonName

--- a/config.cfg
+++ b/config.cfg
@@ -49,6 +49,15 @@ vpn_network_ipv6: 'fd9d:bc11:4020::/48'
 server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
+# Set the commonName of the server certificate
+# {% if newtroy_vpn_server_hostname and vpn_domain %}
+# newtroy_server_cert_common_name: "{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}"
+# {% else %}
+newtroy_server_cert_common_name: "{{ IP_subject_alt_name }}"
+# {% endif %}
+
+newtroy_server_configs: "configs/{{ newtroy_server_cert_common_name }}"
+
 # StrongSwan log level
 # https://wiki.strongswan.org/projects/strongswan/wiki/LoggerConfiguration
 strongswan_log_level: 2
