--- a/roles/vpn/tasks/distribute_keys.yml
+++ b/roles/vpn/tasks/distribute_keys.yml
@@ -8,17 +8,17 @@
     group: "{{ item.group }}"
     mode: "{{ item.mode }}"
   with_items:
-    - src: "configs/{{ IP_subject_alt_name }}/pki/cacert.pem"
+    - src: "{{ newtroy_server_configs }}/pki/cacert.pem"
       dest: "{{ config_prefix|default('/') }}etc/ipsec.d/cacerts/ca.crt"
       owner: strongswan
       group: "{{ root_group|default('root') }}"
       mode: "0600"
-    - src: "configs/{{ IP_subject_alt_name }}/pki/certs/{{ IP_subject_alt_name }}.crt"
+    - src: "{{ newtroy_server_configs }}/pki/certs/{{ IP_subject_alt_name }}.crt"
       dest: "{{ config_prefix|default('/') }}etc/ipsec.d/certs/{{ IP_subject_alt_name }}.crt"
       owner: strongswan
       group: "{{ root_group|default('root') }}"
       mode: "0600"
-    - src: "configs/{{ IP_subject_alt_name }}/pki/private/{{ IP_subject_alt_name }}.key"
+    - src: "{{ newtroy_server_configs }}/pki/private/{{ IP_subject_alt_name }}.key"
       dest: "{{ config_prefix|default('/') }}etc/ipsec.d/private/{{ IP_subject_alt_name }}.key"
       owner: strongswan
       group: "{{ root_group|default('root') }}"
