--- a/roles/vpn/tasks/openssl.yml
+++ b/roles/vpn/tasks/openssl.yml
@@ -7,13 +7,13 @@
 
   - name: Ensure the pki directory does not exist
     file:
-      dest: configs/{{ IP_subject_alt_name }}/pki
+      dest: "{{ newtroy_server_configs }}/pki"
       state: absent
     when: easyrsa_reinit_existent|bool == True
 
   - name: Ensure the pki directories exist
     file:
-      dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
+      dest: "{{ newtroy_server_configs }}/pki/{{ item }}"
       state: directory
       recurse: yes
     with_items:
@@ -26,7 +26,7 @@
 
   - name: Ensure the files exist
     file:
-      dest: "configs/{{ IP_subject_alt_name }}/pki/{{ item }}"
+      dest: "{{ newtroy_server_configs }}/pki/{{ item }}"
       state: touch
     with_items:
       - ".rnd"
@@ -38,7 +38,7 @@
   - name: Generate the openssl server configs
     template:
       src: openssl.cnf.j2
-      dest: "configs/{{ IP_subject_alt_name }}/pki/openssl.cnf"
+      dest: "{{ newtroy_server_configs }}/pki/openssl.cnf"
 
   - name: Build the CA pair
     shell: >
@@ -52,20 +52,20 @@
       -passout pass:"{{ easyrsa_CA_password }}" &&
       touch {{ IP_subject_alt_name }}_ca_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
       creates: "{{ IP_subject_alt_name }}_ca_generated"
       executable: bash
 
   - name: Copy the CA certificate
     copy:
-      src: "configs/{{ IP_subject_alt_name }}/pki/cacert.pem"
-      dest: "configs/{{ IP_subject_alt_name }}/cacert.pem"
+      src: "{{ newtroy_server_configs }}/pki/cacert.pem"
+      dest: "{{ newtroy_server_configs }}/cacert.pem"
       mode: 0600
 
   - name: Generate the serial number
     shell: echo 01 > serial && touch serial_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
       creates: serial_generated
 
   - name: Build the server pair
@@ -86,7 +86,7 @@
       -subj "/CN={{ IP_subject_alt_name }}" &&
       touch certs/{{ IP_subject_alt_name }}_crt_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
       creates: certs/{{ IP_subject_alt_name }}_crt_generated
       executable: bash
 
@@ -108,7 +108,7 @@
       -subj "/CN={{ item }}" &&
       touch certs/{{ item }}_crt_generated
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
       creates: certs/{{ item }}_crt_generated
       executable: bash
     with_items: "{{ users }}"
@@ -123,7 +123,7 @@
       -out private/{{ item }}.p12
       -passout pass:"{{ easyrsa_p12_export_password }}"
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
       executable: bash
       # NEWTROY: Do not recreate .p12 files if they already exist
       # One downside here is that if you change the p12 password, they won't get regenerated
@@ -136,8 +136,8 @@
 
   - name: Copy the p12 certificates
     copy:
-      src: "configs/{{ IP_subject_alt_name }}/pki/private/{{ item }}.p12"
-      dest: "configs/{{ IP_subject_alt_name }}/{{ item }}.p12"
+      src: "{{ newtroy_server_configs }}/pki/private/{{ item }}.p12"
+      dest: "{{ newtroy_server_configs }}/{{ item }}.p12"
       mode: 0600
     with_items:
       - "{{ users }}"
@@ -149,7 +149,7 @@
       awk '{print $5}' |
       sed 's/\/CN=//g'
     args:
-      chdir: "configs/{{ IP_subject_alt_name }}/pki/"
+      chdir: "{{ newtroy_server_configs }}/pki/"
     register: valid_certs
 
   - name: Revoke non-existing users
@@ -161,7 +161,7 @@
       -out crl/{{ item }}.crt
     register: gencrl
     args:
-      chdir: configs/{{ IP_subject_alt_name }}/pki/
+      chdir: "{{ newtroy_server_configs }}/pki/"
       creates: crl/{{ item }}.crt
       executable: bash
     when: item not in users
@@ -177,14 +177,14 @@
       - gencrl is defined
       - gencrl.changed
     args:
-      chdir: configs/{{ IP_subject_alt_name }}/pki/
+      chdir: "{{ newtroy_server_configs }}/pki/"
       executable: bash
   delegate_to: localhost
   become: no
 
 - name: Copy the CRL to the vpn server
   copy:
-    src: configs/{{ IP_subject_alt_name }}/pki/crl/algo.root.pem
+    src: "{{ newtroy_server_configs }}/pki/crl/algo.root.pem"
     dest: "{{ config_prefix|default('/') }}etc/ipsec.d/crls/algo.root.pem"
   when:
     - gencrl is defined
