Use DNS name to connect to VPN server

--- a/config.cfg
+++ b/config.cfg
@@ -50,11 +50,7 @@ server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
 # Set the commonName of the server certificate
-# {% if newtroy_vpn_server_hostname and vpn_domain %}
-# newtroy_server_cert_common_name: "{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}"
-# {% else %}
-newtroy_server_cert_common_name: "{{ IP_subject_alt_name }}"
-# {% endif %}
+newtroy_server_cert_common_name: "{% if newtroy_vpn_server_hostname and vpn_domain %}{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}{% else %}{{ IP_subject_alt_name }}{% endif %}"
 
 newtroy_server_configs: "configs/{{ newtroy_server_cert_common_name }}"
 
