--- a/config.cfg
+++ b/config.cfg
@@ -50,7 +50,7 @@ server_name: "{{ ansible_ssh_host }}"
 IP_subject_alt_name: "{{ ansible_ssh_host }}"
 
 # Set the commonName of the server certificate
-newtroy_server_cert_common_name: "{% if newtroy_vpn_server_hostname and vpn_domain %}{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}{% else %}{{ IP_subject_alt_name }}{% endif %}"
+newtroy_server_cert_common_name: "{% if newtroy_vpn_server_fqdn %}{{ newtroy_vpn_server_fqdn }}{% else %}{{ IP_subject_alt_name }}{% endif %}"
 
 newtroy_server_configs: "configs/{{ newtroy_server_cert_common_name }}"
 
@@ -94,24 +94,29 @@ newtroy_algo_namespace: "{{ 'https://github.com/mrled/algo/tree/newtroy' | newtr
 # Block traffic between connected clients
 BetweenClients_DROP: N
 
-# Used for resolving hosts within the VPN, not connecting to the VPN
-# - Set BetweenClients_DROP to N so that clients can actually talk to each other
-# - If dns_adblocking role is enabled, configure dnsmasq to resolve the clients
-# - If the dns_route53 tag is defined,
-#   and vpn_hosted_zone_id is set to a valid Route53 hosted zone,
-#   and you have provided valid AWS credentials,
-#   create a Route53 record for each client
-# Connected users will be able to communicate with each other using $user.$vpn_domain DNS names
-vpn_domain: internal.micahrl.com
-
-# If defined, update a Route53 Hosted Zone as described above
-vpn_hosted_zone_id: Z2OOB3F1JEVLME
+# Used for setting a DNS name for the VPN server
+newtroy_vpn_server_parent_domain: micahrl.com
+newtroy_vpn_server_fqdn: "{{ newtroy_vpn_server_hostname }}.{{ newtroy_vpn_server_parent_domain }}"
+newtroy_vpn_server_hosted_zone_id: Z3HVGWA7OSS1TK
 
 # This unfortunately named variable is used in the vpn role to indicate that the VPN server should
 # generate a certificate with the value of subjectAltName_DNS as a DNS entry in the cert's SubjectAltName field
 domain: true
 # If set, this variable is used by the vpn role to assign a DNS subject alt name to the VPN server cert
-subjectAltName_DNS: "{{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}"
+subjectAltName_DNS: "{{ newtroy_vpn_server_fqdn }}"
+
+# Used for resolving hosts within the VPN, not connecting to the VPN
+# - Set BetweenClients_DROP to N so that clients can actually talk to each other
+# - If dns_adblocking role is enabled, configure dnsmasq to resolve the clients
+# - If the dns_vpnclients_route53 tag is defined,
+#   and newtroy_vpn_internal_hosted_zone_id is set to a valid Route53 hosted zone,
+#   and you have provided valid AWS credentials,
+#   create a Route53 record for each client
+# Connected users will be able to communicate with each other using $user.$newtroy_vpn_internal_domain DNS names
+newtroy_vpn_internal_domain: internal.micahrl.com
+
+# If defined, update a Route53 Hosted Zone as described above
+newtroy_vpn_internal_hosted_zone_id: Z2OOB3F1JEVLME
 
 congrats:
   common: |
