--- a/roles/dns_vpnclients_route53/tasks/main.yml
+++ b/roles/dns_vpnclients_route53/tasks/main.yml
@@ -16,14 +16,14 @@
       region: "{{ region }}"
       template: "configs/{{ route53_stack_name }}.yml"
       template_parameters:
-        NewTroyZone: "{{ vpn_hosted_zone_id }}"
+        NewTroyZone: "{{ newtroy_vpn_internal_hosted_zone_id }}"
       tags:
         Environment: Algo
     register: stack
 
     when:
-    - vpn_domain is defined
-    - vpn_hosted_zone_id is defined
+    - newtroy_vpn_internal_domain is defined
+    - newtroy_vpn_internal_hosted_zone_id is defined
 
   always:
     - name: Remove temporary Route53 CloudFormation template
