Fix IP addresses
- Fix mismatched IP address assignments
- Add IP address for VPN server

--- a/config.cfg
+++ b/config.cfg
@@ -79,8 +79,26 @@ dns_servers:
     - 2606:4700:4700::1111
     - 2606:4700:4700::1001
 
+# Offsets for client and server IP addresses
+# The server server offset is the IP address assigned to the server itself
+# The client offset is the start address for all clients
+# WARNING: Take care to ensure that these values will result in IP addresses within the vpn_network range
+# Example:
+#   Configuration:
+#     users: [user1, user2]
+#     vpn_network: 10.19.48.0/24
+#     vpn_network_ipv6: 'fd9d:bc11:4020::/48'
+#     newtroy_network_server_offset: 1
+#     newtroy_network_client_offset: 11
+#   Result:
+#     The server is assigned an IP address of 10.19.48.1 (10.19.48.0 + 1)
+#     user1 and user2 are assigned IP addresses of 10.19.48.11 and 10.19.48.12 respectively
+#     (10.19.58.0 + 11 and + 12 respectively)
+newtroy_network_server_offset: 1
+newtroy_network_client_offset: 11
+
 # IP address for the local dns resolver
-local_service_ip: 172.16.0.1
+local_service_ip: "{{ vpn_network | ipaddr(newtroy_network_server_offset) | ipaddr('address') }}"
 
 ## NEWTROY change. Commented out. Now set in roles/vpn/tasks/client_configs.yml
 # pkcs12_PayloadCertificateUUID: "{{ 900000 | random | to_uuid | upper }}"
