Rename route53 roles

--- a/config.cfg
+++ b/config.cfg
@@ -126,7 +126,7 @@ subjectAltName_DNS: "{{ newtroy_vpn_server_fqdn }}"
 # Used for resolving hosts within the VPN, not connecting to the VPN
 # - Set BetweenClients_DROP to N so that clients can actually talk to each other
 # - If dns_adblocking role is enabled, configure dnsmasq to resolve the clients
-# - If the dns_vpnclients_route53 tag is defined,
+# - If the dns_vpn_internal_network_route53 tag is defined,
 #   and newtroy_vpn_internal_hosted_zone_id is set to a valid Route53 hosted zone,
 #   and you have provided valid AWS credentials,
 #   create a Route53 record for each client
